# todo-kaios

./: .babelrc.json  .gitignore  Cargo.toml  README.md  Trunk.toml  build_for_kaios25.sh  index.html  package-lock.json  package.json  shell.nix  style.css  todo.txt
.nix/: firefox-macos.nix
kaios/: manifest.webapp  wasm-shim.js
src/: app.rs  main.rs  todo.rs
src/components/: header.rs  input.rs  mod.rs  softkey.rs  todos.rs
src/hooks/: mod.rs  use_navigation.rs
