[package]
name = "todo-kaios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.4"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["Element", "NodeList"] }
yew = "0.19.3"
